--- a/src/components/Parabola.astro
+++ b/src/components/Parabola.astro
@@ -2,5 +2,5 @@
 const { class: className, classNameToBottom} = Astro.props;
 ---
 
-    <div class={`absolute size-80 lg:size-[700px] rounded-full shadow-2xl opacity-60 z-[-1] blur-3xl ${className}`}></div>
-    <div class={`absolute size-80 lg:size-[700px] rounded-full shadow-2xl opacity-60 z-[-1] blur-3xl ${classNameToBottom}`}></div>
+    <div id="scroll__prbla" class={`fixed size-80 lg:size-[700px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-[-1] blur-3xl ${className}`}></div>
+    <div id="scroll_prbla" class={`fixed size-80 lg:size-[700px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-[-1] blur-3xl ${classNameToBottom}`}></div>
