feat: Se reorganiza el proyecto

--- a/src/components/templates/Habilidades.astro
+++ b/src/components/templates/Habilidades.astro
@@ -10,8 +10,8 @@ const i18n = getI18N({ currentLocale });
   <div class="hero-content p-0 text-center">
     <div class="max-w-5xl pb-10">
       <div class="bg-base-content bg-opacity-10 backdrop-blur-[16px] backdrop-saturate-[180%] border border-base-content rounded-xl shadow-base-content py-5 px-5 card shadow__cardPulse">
-        <!-- <div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
-          <div class="mx-auto max-w-7xl px-6 lg:px-8">
+        <div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
+          <!-- <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2">
               <ItemsHabilidades />
             </div>
