--- a/src/pages/es/inicio.astro
+++ b/src/pages/es/inicio.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Navbar from '@/components/Navbar.astro';
-import Header from '@/components/Header.astro';
-import Habilidades from '@/components/Habilidades.astro';
-import Footer from '@/components/Footer.astro';
+import Navbar from '@/components/organismos/Navbar.astro';
+import Header from '@/components/templates/Header.astro';
+import Habilidades from '@/components/templates/Habilidades.astro';
+import Footer from '@/components/templates/Footer.astro';
 ---
 
 <Layout>
