--- a/src/pages/es/projects.astro
+++ b/src/pages/es/projects.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Navbar from '@/components/Navbar.astro';
-import Proyectos from '@/components/Proyectos.astro';
-import Footer from '@/components/Footer.astro';
+import Navbar from '@/components/organismos/Navbar.astro';
+import Proyectos from '@/components/templates/Proyectos.astro';
+import Footer from '@/components/templates/Footer.astro';
 ---
 
 <Layout>
