--- a/src/utils/en/dataNavbarEN.astro
+++ b/src/utils/en/dataNavbarEN.astro
@@ -2,23 +2,19 @@
 export const dataListNavbarEN = [
   {
     label: 'Home',
-    to: '#inicio',
+    to: 'inicio',
   },
   {
     label: 'About Me',
-    to: '#about',
-  },
-  {
-    label: 'Skills',
-    to: '#skills',
+    to: 'about',
   },
   {
     label: 'Projects',
-    to: '#projects',
+    to: 'projects',
   },
   {
     label: 'Contact',
-    to: '#contact',
+    to: 'contact',
   },
 ];
 ---
