--- a/src/utils/fr/dataNavbarFR.astro
+++ b/src/utils/fr/dataNavbarFR.astro
@@ -2,24 +2,19 @@
 export const dataListNavbarFR = [
     {
         label: 'Accueil',
-        to: '#inicio'
+        to: 'inicio'
     },
     {
         label: 'À propos de moi',
-        to: '#about'
-    },
-    {
-        label: 'Compétences',
-        to: '#skills'
+        to: 'about'
     },
     {
         label: 'Projets',
-        to: '#projects'
+        to: 'projects'
     },
     {
         label: 'Contact',
-        to: '#contact'
+        to: 'contact'
     }
 ]
-
 ---
