--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -1,10 +1,10 @@
 ---
-import ThemeButton from '@/components/theme/ThemeButton.astro';
-import ItemsNavbar from '@/components/items/ItemsNavbar.astro';
-import LangPicker from '@/components/LangPicker.astro';
-import { VersionSelect } from '@/components/version/ButtonVersion';
-import { ImageContrast } from '@/components/islands/ImageContrast';
-import ItemsNavrbarDrawer from './items/ItemsNavrbarDrawer.astro';
+import ThemeButton from '@/components/moleculas/ThemeButton.astro';
+import ItemsNavbar from '@/components/moleculas/ItemsNavbar.astro';
+import LangPicker from '@/components/moleculas/LangPicker.astro';
+import { VersionSelect } from '@/components/moleculas/ButtonVersion';
+import { ImageContrast } from '@/components/moleculas/ImageContrast';
+import ItemsNavrbarDrawer from '@/components/moleculas/ItemsNavrbarDrawer.astro';
 
 const { currentLocale } = Astro;
 ---
