--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -1,7 +1,7 @@
 ---
 import { getI18N } from '@/i18n';
-import Bubble from '@/components/Bubble.astro';
-import { ModalWork } from '@/components/modal/ModalWork';
+import Bubble from '@/components/atomos/Bubble.astro';
+import { ModalWork } from '@/components/moleculas/ModalWork';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
