--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -1,8 +1,8 @@
 ---
 import { getI18N } from '@/i18n';
 
-import Bubble from '@/components/Bubble.astro';
-import ItemsContacto from '@/components/items/ItemsContacto.astro';
+import Bubble from '@/components/atomos/Bubble.astro';
+import ItemsContacto from '@/components/moleculas/ItemsContacto.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
