--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -1,7 +1,7 @@
 ---
 import { getI18N } from '@/i18n';
-import Bubble from '@/components/Bubble.astro';
-import { Repositorios } from '@/components/items/ItemsRepositorios';
+import Bubble from '@/components/atomos/Bubble.astro';
+import {Repositorios} from '@/components/moleculas/ItemsRepositorios'
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
