--- a/src/pages/es/about.astro
+++ b/src/pages/es/about.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Navbar from '@/components/Navbar.astro';
-import Acerca from '@/components/Acerca.astro';
-import Footer from '@/components/Footer.astro';
+import Navbar from '@/components/organismos/Navbar.astro';
+import Acerca from '@/components/templates/Acerca.astro';
+import Footer from '@/components/templates/Footer.astro';
 ---
 
 <Layout>
