--- a/src/pages/es/contact.astro
+++ b/src/pages/es/contact.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Navbar from '@/components/Navbar.astro';
-import Contacto from '@/components/Contacto.astro';
-import Footer from '@/components/Footer.astro';
+import Navbar from '@/components/organismos/Navbar.astro';
+import Contacto from '@/components/templates/Contacto.astro';
+import Footer from '@/components/templates/Footer.astro';
 ---
 
 <Layout>
