--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -19,10 +19,10 @@ const i18n = getI18N({ currentLocale });
           {i18n.HEADER.HEADER_TITLE}
         </h1>
         <span
-          class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
-        >
-          {i18n.HEADER.HEADER_NAME}
-        </span>
+        class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent"
+      >
+        {i18n.HEADER.HEADER_NAME}
+      </span>
       <p class="py-5 text-lg font-medium text-base-content">{i18n.HEADER.HEADER_ABOUT}</p>
 
       <!-- Se deshabilitó el botón de proyectos por el momento para modificacion de la página -->
