--- a/src/utils/es/dataNavbar.astro
+++ b/src/utils/es/dataNavbar.astro
@@ -2,7 +2,7 @@
    export const dataListNavbar = [
     {
         label: 'Inicio',
-        to: 'inicio'
+        to: 'home',
     },
     {
         label: 'Acerca de mí',
