--- a/src/utils/fr/dataNavbarFR.astro
+++ b/src/utils/fr/dataNavbarFR.astro
@@ -2,7 +2,7 @@
 export const dataListNavbarFR = [
     {
         label: 'Accueil',
-        to: 'inicio'
+        to: 'home',
     },
     {
         label: 'À propos de moi',
