--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -7,7 +7,7 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<div class="hero bg-base-200 min-h-screen">
+<div class="hero min-h-screen">
   <div class="hero-content text-center">
     <Bubble
       class="top-40 lg:top-72 left-0 bg-primary"
