--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -8,7 +8,7 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<div class="hero bg-base-200 min-h-screen">
+<div class="hero min-h-screen">
   <div class="hero-content text-center">
     <Bubble
       class="lg:bottom-24 left-0 bg-primary"
