--- a/src/components/templates/Footer.astro
+++ b/src/components/templates/Footer.astro
@@ -9,16 +9,16 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <footer
-  class="footer footer-center bg-gradient-to-tl from-primary to-accent backdrop-blur-[30px] backdrop-saturate-[180%] rounded-t-lg text-base-100 p-7"
+  class="footer footer-center bg-base-300 backdrop-blur-[30px] backdrop-saturate-[180%] rounded-t-lg text-base-content p-7 absolute z-0"
 >
   <aside>
-    <ImageContrast client:load />
-    <p class="font-bold flex items-center justify-center">
+    <ImageContrast client:load width="w-24"/>
+    <p class="text-base flex items-center justify-center">
       {i18n.FOOTER.FOOTER_MAKE}
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="1.2em"
-        height="1em"
+        width="2rem"
+        height="2rem"
         viewBox="0 0 24 24"
       >
         <path
@@ -26,35 +26,7 @@ const i18n = getI18N({ currentLocale });
           d="m12 21.35l-1.45-1.32C5.4 15.36 2 12.27 2 8.5C2 5.41 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.08C13.09 3.81 14.76 3 16.5 3C19.58 3 22 5.41 22 8.5c0 3.77-3.4 6.86-8.55 11.53z"
         ></path>
       </svg>
-      {i18n.FOOTER.FOOTER_SEPARATOR} &nbsp;
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="1.2em"
-        height="1em"
-        viewBox="0 0 24 24"
-      >
-        <path
-          fill="#141414"
-          d="M2 21h18v-2H2M20 8h-2V5h2m0-2H4v10a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4v-3h2a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2"
-        ></path>
-      </svg>
       <br />
-    </p>
-    <div class="flex justify-center items-center">
-      <p>{i18n.FOOTER.FOOTER_DESCRIPTION}</p>
-    </div>
-    <div class="flex justify-center items-center flex-col">
-      <img
-        src="/favicon.svg"
-        alt="astro"
-        class="w-9 fill-current"
-        loading="lazy"
-        aria-label="Desarrollo hecho con astro"
-      />
-      <p class="font-semibold">Version {v}</p>
-    </div>
-    <p>
-      Copyright © {new Date().getFullYear()} - {i18n.FOOTER.FOOTER_ALL_RIGHT}
     </p>
     <nav>
       <div class="grid grid-flow-col gap-4">
@@ -63,8 +35,8 @@ const i18n = getI18N({ currentLocale });
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
             id="github"
-            width="24"
-            height="24"
+            width="44"
+            height="44"
             class="fill-current"
            
           >
@@ -81,9 +53,9 @@ const i18n = getI18N({ currentLocale });
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
-            id="github"
-            width="24"
-            height="24"
+            id="linkedin"
+            width="44"
+            height="44"
             class="fill-current"
           >
             <path
