--- a/src/components/templates/Habilidades.astro
+++ b/src/components/templates/Habilidades.astro
@@ -7,64 +7,112 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero min-h-screen">
-  <div class="hero-content p-0 text-center">
-    <div class="max-w-5xl pb-10">
-      <div class="bg-base-content bg-opacity-10 backdrop-blur-[16px] backdrop-saturate-[180%] border border-base-content rounded-xl shadow-base-content py-5 px-5 card shadow__cardPulse">
-        <div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
-          <!-- <div class="mx-auto max-w-7xl px-6 lg:px-8">
-            <div class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2">
-              <ItemsHabilidades />
-            </div>
-          </div> -->
-
-          <!-- Tabs para la agrupacion de tecnologias -->
-          <div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
-            <div class="mx-auto max-w-7xl px-6 lg:px-8" id="default-styled-tab-content">
-              <div class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2" id="styled-profile" role="tabpanel" aria-labelledby="profile-tab">
-                <p class="text-sm">
-                  This is some placeholder content the 
-                  <strong class="font-medium">Profile tab's associated content</strong>. 
-                  Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
-                  <!-- <ItemsHabilidades /> -->
-                  <div>Hola</div>
-                  <div>Hola</div>
-              </div>
-              <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-                <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
-              </div>
-              <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-settings" role="tabpanel" aria-labelledby="settings-tab">
-                <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
-              </div>
-              <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-contacts" role="tabpanel" aria-labelledby="contacts-tab">
-                <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Contacts tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
-              </div>
-              <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-asdasda" role="tabpanel" aria-labelledby="asdasda-tab">
-                <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">asdasda tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
-              </div>
-            </div>
-        </div>
+	<div class="hero-content p-0 text-center">
+		<div class="max-w-5xl pb-10">
+			<div class="bg-base-content bg-opacity-10 backdrop-blur-[16px] backdrop-saturate-[180%] border border-base-content rounded-xl shadow-base-content py-5 px-5 card shadow__cardPulse">
+				<div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
+					<div class="mx-auto max-w-7xl px-6 lg:px-8">
+						<div class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2">
+							<ItemsHabilidades />
+						</div>
+					</div>
           
-          <div class="flex items-center justify-center mt-4">
-            <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="default-styled-tab" data-tabs-toggle="#default-styled-tab-content" data-tabs-active-classes="text-primary border-primary" data-tabs-inactive-classes="text-gray-500 hover:text-gray-600 dark:text-gray-400 border-gray-100 hover:border-gray-300 dark:border-gray-700 dark:hover:text-gray-300" role="tablist">
-              <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="profile-styled-tab" data-tabs-target="#styled-profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Frontend</button>
-              </li>
-              <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="dashboard-styled-tab" data-tabs-target="#styled-dashboard" type="button" role="tab" aria-controls="dashboard" aria-selected="false">Backend</button>
-              </li>
-              <li class="me-2" role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="settings-styled-tab" data-tabs-target="#styled-settings" type="button" role="tab" aria-controls="settings" aria-selected="false">Estudio</button>
-              </li>
-              <li role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="contacts-styled-tab" data-tabs-target="#styled-contacts" type="button" role="tab" aria-controls="contacts" aria-selected="false">Paquetes</button>
-              </li>
-              <li role="presentation">
-                <button class="inline-block p-4 border-b-2 rounded-t-lg" id="asdasda-styled-tab" data-tabs-target="#styled-asdasda" type="button" role="tab" aria-controls="asdasda" aria-selected="false">Alojamiento web</button>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+					<!-- Tabs para la agrupacion de tecnologias -->
+					<!-- <div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
+						<div class="mx-auto max-w-7xl px-6 lg:px-8" id="default-styled-tab-content">
+							<div class="mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-2" id="styled-profile" role="tabpanel" aria-labelledby="profile-tab">
+							  <div>Hola</div>
+								<div>Hola</div>
+								<div>Hola</div>
+							</div>
+							<div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+								<p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
+							</div>
+							<div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-settings" role="tabpanel" aria-labelledby="settings-tab">
+								<p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
+							</div>
+							<div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-contacts" role="tabpanel" aria-labelledby="contacts-tab">
+								<p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Contacts tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
+							</div>
+							<div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="styled-asdasda" role="tabpanel" aria-labelledby="asdasda-tab">
+								<p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">asdasda tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. </p>
+							</div>
+						</div>
+					</div> -->
+
+
+
+					<!-- <div class="flex items-center justify-center mt-4">
+						<ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="default-styled-tab" data-tabs-toggle="#default-styled-tab-content" data-tabs-active-classes="text-primary border-primary" data-tabs-inactive-classes="text-gray-500 hover:text-gray-600 dark:text-gray-400 border-gray-100 hover:border-gray-300 dark:border-gray-700 dark:hover:text-gray-300" role="tablist">
+							<li class="me-2" role="presentation">
+								<button
+                    class="inline-block p-4 border-b-2 rounded-t-lg" 
+                    id="profile-styled-tab" 
+                    data-tabs-target="#styled-profile" 
+                    type="button" 
+                    role="tab" 
+                    aria-controls="profile" 
+                    aria-selected="false">
+                Frontend
+              </button>
+							</li>
+							<li class="me-2" role="presentation">
+								<button 
+                    class="inline-block p-4 border-b-2 rounded-t-lg" 
+                    id="dashboard-styled-tab" 
+                    data-tabs-target="#styled-dashboard" 
+                    type="button" 
+                    role="tab" 
+                    aria-controls="dashboard" 
+                    aria-selected="false">
+                  Backend
+                </button>
+							</li>
+							<li class="me-2" role="presentation">
+								<button 
+                    class="inline-block p-4 border-b-2 rounded-t-lg" 
+                    id="settings-styled-tab"
+                    data-tabs-target="#styled-settings" 
+                    type="button" 
+                    role="tab" 
+                    aria-controls="settings" 
+                    aria-selected="false">
+                Estudio
+              </button>
+							</li>
+							<li role="presentation">
+								<button 
+                    class="inline-block p-4 border-b-2 rounded-t-lg" 
+                    id="contacts-styled-tab"
+                    data-tabs-target="#styled-contacts" 
+                    type="button" 
+                    role="tab" 
+                    aria-controls="contacts" 
+                    aria-selected="false">
+                Paquetes
+              </button>
+							</li>
+							<li role="presentation">
+								<button 
+                    class="inline-block p-4 border-b-2 rounded-t-lg" 
+                    id="asdasda-styled-tab" 
+                    data-tabs-target="#styled-asdasda" 
+                    type="button" 
+                    role="tab" 
+                    aria-controls="asdasda" 
+                    aria-selected="false">
+                Alojamiento web
+              </button>
+							</li>
+						</ul>
+					</div> -->
+
+
+
+
+
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
