--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getI18N } from "@/i18n/index";
-const currentLocale = "es"; // Define manualmente el idioma por defecto
+const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
