feat: Se agrega transicion de rutas y se quita version

--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -17,7 +17,7 @@ const { currentLocale } = Astro;
       <a href="#inicio" class="w-12 rounded">
         <ImageContrast client:load width="w-12"/>
       </a>
-      <VersionSelect currentLocale={currentLocale} client:load />
+      <!-- <VersionSelect currentLocale={currentLocale} client:load /> -->
     </div>
   </div>
 
