feat: Cambio de boton principal

--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -26,7 +26,7 @@ const i18n = getI18N({ currentLocale });
       <p class="py-5 text-lg font-medium text-base-content">{i18n.HEADER.HEADER_ABOUT}</p>
       <a
         href="#habilidades"
-        class="btn h-10 min-h-14 pl-6 pr-6 font-bold text-sm border-none bg-base-300 z-50"
+        class="btn btn-accent h-10 min-h-14 pl-6 pr-6 font-bold text-sm border-none z-50"
       >
         <svg 
             aria-hidden="true"
