optimization: Se adaptan complementos

--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -70,7 +70,7 @@ const { currentLocale } = Astro;
       >
         &times;
       </label>
-        <ul class="flex items-center flex-col w-full">
+        <ul class="flex items-center flex-col w-full text-current">
           <ItemsNavrbarDrawer />
         </ul>
     </ul>
