--- a/src/components/moleculas/ThemeButton.astro
+++ b/src/components/moleculas/ThemeButton.astro
@@ -52,7 +52,7 @@ const i18n = getI18N({ currentLocale });
   class="z-10 hidden bg-base-content rounded-lg shadow w-44"
 >
   <ul
-    class="flex flex-col gap-2 p-2 border-none bg-base-100 rounded-md z-50 w-[12rem] h-[20.6rem] overflow-y-auto overflow-x-hidden"
+    class="flex flex-col gap-2 p-2 border-none bg-base-100 rounded-md z-50 w-[12rem] h-[20.6rem] overflow-y-auto overflow-x-hidden animate__animated animate__fadeIn"
     aria-labelledby="dropdownDefaultButton"
   >
     {
