--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import 'animate.css';
 // Extraer valores de la URL
 const { currentLocale, url } = Astro;
 const [, lang, slug = ''] = url.pathname.split('/'); // Asignar un valor por defecto a slug
@@ -47,7 +48,7 @@ const imageUrl = `${baseUrl}kdl.webp`;
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body class="bg-base-300">
-    <div id="swup" class="transition-fade">
+    <div id="swup" class="transition-fade ">
       <slot />
     </div>
     <script
