--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,4 +98,42 @@ const imageUrl = `${baseUrl}kdl.webp`;
       filter: blur(4rem);
     }
   }
+  .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 16px;
+  color: currentColor;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  color:currentColor;
+  background: #007aff;
+}
+
+
+
 </style>
