--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -119,21 +119,18 @@ const imageUrl = `${baseUrl}kdl.webp`;
   object-fit: cover;
 }
 
-.swiper-pagination-bullet {
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  font-size: 16px;
-  color: currentColor;
-  opacity: 1;
+/* .swiper-pagination-bullet {
+  width: 12px; 
+  height: 12px; 
+  background-color: currentColor; 
+  transition: all 0.3s ease; 
 }
 
 .swiper-pagination-bullet-active {
-  color:currentColor;
-  background: #007aff;
-}
-
+  width: 26px; 
+  height: 26px; 
+  background: currentColor; 
+} */
 
 
 </style>
