--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -16,11 +16,11 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-7xl ">
       <div>
-        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-20">
           {i18n.PROJECTS.PROJECTS_TITLE}
         </h2>
       </div>
-      <div class="grid grid-cols-1 gap-6 animate__animated animate__zoomIn">
+      <div class="grid grid-cols-1 gap-6 animate__animated animate__zoomIn backdrop-blur-[100px] backdrop-saturate-[180%] rounded-lg">
          <TabsProyectos client:load currentLocale={currentLocale}/>
       </div>
     </div>
