--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -15,12 +15,12 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-7xl ">
       <div>
-        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36 animate__animated animate__zoomIn">
           {i18n.ABOUTME.ABOUT_TITLE}
         </h2>
       </div>
 
-      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4">
+      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4 animate__animated animate__zoomIn">
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
             <div
