--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -16,7 +16,7 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-7xl ">
       <div>
-        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-20">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-20 animate__animated animate__zoomIn">
           {i18n.PROJECTS.PROJECTS_TITLE}
         </h2>
       </div>
