feat: URL vercel, nuevo CV

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -112,7 +112,7 @@ const i18n = getI18N({ currentLocale });
 
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
           <a
-          href="https://docs.google.com/viewer?url=https://portafolio-vercel-deploy.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
+          href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
           target="_blank"
           class="btn btn-primary w-full"
           aria-label="Ver cv para saber mas acerca de mi"
