fix: Url site lenguages

--- a/src/components/moleculas/LangPicker.astro
+++ b/src/components/moleculas/LangPicker.astro
@@ -4,7 +4,7 @@ import { languages } from '@/i18n/ui';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
-const url = Astro.url || new URL(Astro.site); // Usa Astro.site como respaldo
+const url = Astro.site; 
 const origin = url.origin; // Esto ahora debe ser confiable tanto en dev como en prod
 const [, lang, ...slug] = url.pathname.split("/");
 ---
