feat: Fix theme button

--- a/src/components/moleculas/LangPicker.astro
+++ b/src/components/moleculas/LangPicker.astro
@@ -11,7 +11,7 @@ const [, lang, ...slug] = url.pathname.split("/")
 
 <button
   id="dropdownDefaultButton"
-  data-dropdown-toggle="dropdownTheme"
+  data-dropdown-toggle="dropdownLang"
   class="btn btn-sm btn-ghost hover:btn-outline px-3"
   type="button"
   aria-label="Boton de lenguajes"
@@ -50,7 +50,7 @@ const [, lang, ...slug] = url.pathname.split("/")
 
 <!-- Dropdown menu -->
 <div
-  id="dropdownTheme"
+  id="dropdownLang"
   class="z-10 hidden bg-base-content rounded-lg shadow w-44"
 >
   <ul class="py-2 text-base-300 animate__animated animate__fadeIn" aria-labelledby="dropdownDefaultButton">
