--- a/src/components/moleculas/ThemeButton.astro
+++ b/src/components/moleculas/ThemeButton.astro
@@ -8,7 +8,7 @@ const i18n = getI18N({ currentLocale });
 
 <button
   id="dropdownDefaultButton"
-  data-dropdown-toggle="dropdownLang"
+  data-dropdown-toggle="dropdownTheme"
   class="btn btn-sm btn-ghost hover:btn-outline px-3"
   type="button"
   aria-label="Boton de temas"
@@ -48,7 +48,7 @@ const i18n = getI18N({ currentLocale });
 
 <!-- Dropdown menu -->
 <div
-  id="dropdownLang"
+  id="dropdownTheme"
   class="z-10 hidden bg-base-content rounded-lg shadow w-44"
 >
   <ul
