--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -28,6 +28,9 @@ const { currentLocale } = Astro;
     <div class="list-none">
       <ThemeButton />
     </div>
+    <div class="xl:w-8 md:w-0 sm:w-0">
+
+    </div>
     <!-- <div class="pl-2">
       <LangPicker />
     </div> -->
