feat: Se mejora resposive proyectos y SEO

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ const [, lang, slug = ''] = url.pathname.split('/'); // Asignar un valor por def
 const title = slug ? slug.charAt(0).toUpperCase() + slug.slice(1) : '';
 
 // Constantes para URLs y títulos
-const baseUrl = 'https://portafolio-vercel-deploy.vercel.app/';
+const baseUrl = 'https://khelde.vercel.app/';
 const siteTitle = 'Web developer JR - IT Engineer';
 const siteDescription = 'Portafolio de Erick Gonzalez';
 const imageUrl = `${baseUrl}kdl.webp`;
