feat: Se arreglan vistas y bugs

--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -22,21 +22,18 @@ const { currentLocale } = Astro;
   </div>
 
   <div class="flex-none">
-    <ul class="menu menu-horizontal min-[980px]:flex hidden">
+    <ul class="menu menu-horizontal min-[547px]:flex hidden">
       <ItemsNavbar />
     </ul>
     <div class="list-none">
       <ThemeButton />
     </div>
-    <div class="xl:w-8 md:w-0 sm:w-0">
-
-    </div>
-    <!-- <div class="pl-2">
+    <div class="pl-2">
       <LangPicker />
-    </div> -->
+    </div>
     <label
       for="my-drawer-4"
-      class="btn btn-ghost min-[980px]:hidden drawer-button"
+      class="btn btn-ghost min-[547px]:hidden drawer-button"
       aria-label="label"
     >
       <svg
