--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -13,7 +13,7 @@ const i18n = getI18N({ currentLocale });
     classNameToBottom="top-60 lg:right-[25rem] bg-gradient-to-t from-base-content via-primary -skew-x-[35deg] rotate-[-2deg] shadow__skew" />
     <div id="scrolling-element" class="max-w-md fixed animate__animated animate__zoomIn">
       <!-- <Toast currentLocale={currentLocale} client:load /> -->
-      <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold"> {i18n.HEADER.HEADER_TITLE} </h1>
+      <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold text-nowrap"> {i18n.HEADER.HEADER_TITLE} </h1>
       <span class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent"> 
         {i18n.HEADER.HEADER_NAME} 
       </span>
